# QuBot

./: .gitignore  README.md  pyproject.toml
qubot/: __main__.py
